; ModuleID = '/home/carl/AnghaBench/jemalloc/test/integration/extr_xallocx.c_arena_ind.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/integration/extr_xallocx.c_arena_ind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arena_ind.ind = internal global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"arenas.create\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"Unexpected mallctl failure creating arena\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @arena_ind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arena_ind() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @arena_ind.ind, align 4
  %3 = icmp eq i32 %2, 0
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  store i64 4, i64* %1, align 8
  %5 = call i32 @mallctl(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* bitcast (i32* @arena_ind.ind to i8*), i64* %1, i32* null, i32 0)
  %6 = call i32 @assert_d_eq(i32 %5, i32 0, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  br label %7

7:                                                ; preds = %4, %0
  %8 = load i32, i32* @arena_ind.ind, align 4
  ret i32 %8
}

declare dso_local i32 @assert_d_eq(i32, i32, i8*) #1

declare dso_local i32 @mallctl(i8*, i8*, i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
